feat: add responsiveness for 1200px screen

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -218,51 +218,53 @@
               <button class="arrow arrow-left">
                 <img src="../../assets/icons/buttons/arrow-left.svg" alt="" />
               </button>
-              <div class="feedback__card-wrapper">
+              <div class="feedback__slides">
                 <div class="feedback__card">
-                  <img class="person-image" src="../../assets/images/testimonials/karen.jpg" alt="Karen" />
-                  <div class="feedback__card-caption">
-                    <h3 class="person-name">Karen Maitland</h3>
-                    <div class="person-donation">+$10</div>
+                  <div class="card-info">
+                    <img class="person-image" src="../../assets/images/testimonials/karen.jpg" alt="Karen" />
+                    <div class="feedback__card-caption">
+                      <h3 class="person-name">Karen Maitland</h3>
+                      <div class="person-donation">+$10</div>
+                    </div>
                   </div>
                   <p class="card-text">
                     "Thank you so much for these wonderful live webcams of the eagles on Catalina Island. Being able to watch them in their natural habitat as opposed to zoos is so
                     wonderful. I cannot see myself ever being able to come up there to see them in person, so this is a great substitute. Thank you again."
                   </p>
                 </div>
-              </div>
-              <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="../../assets/images/testimonials/sara.jpg" alt="Sara" />
-                  <div class="feedback__card-caption">
-                    <h3 class="person-name">Sara Jones</h3>
-                    <div class="person-donation">+$13</div>
+                  <div class="card-info">
+                    <img class="person-image" src="../../assets/images/testimonials/sara.jpg" alt="Sara" />
+                    <div class="feedback__card-caption">
+                      <h3 class="person-name">Sara Jones</h3>
+                      <div class="person-donation">+$13</div>
+                    </div>
                   </div>
                   <p class="card-text">
                     "A disability prevents me from enjoying the outdoors and travel like I used to do. I really enjoy all the live cams and can spend HOURS watching real-time
                     entertainment. Wild life style!"
                   </p>
                 </div>
-              </div>
-              <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="../../assets/images/testimonials/alex.jpg" alt="Alex" />
-                  <div class="feedback__card-caption">
-                    <h3 class="person-name">Alex Barden</h3>
-                    <div class="person-donation">+$7</div>
+                  <div class="card-info">
+                    <img class="person-image" src="../../assets/images/testimonials/alex.jpg" alt="Alex" />
+                    <div class="feedback__card-caption">
+                      <h3 class="person-name">Alex Barden</h3>
+                      <div class="person-donation">+$7</div>
+                    </div>
                   </div>
                   <p class="card-text">
                     "Here's a huge "thank-you" from New Hampshire - you allow me to travel the world without ever leaving the comfort of my office chair. Jammies on and coffee cup
                     in hand, I am Phineas Fogg!!"
                   </p>
                 </div>
-              </div>
-              <div class="feedback__card-wrapper">
                 <div class="feedback__card">
-                  <img class="person-image" src="../../assets/images/testimonials/alene.jpg" alt="Alene" />
-                  <div class="feedback__card-caption">
-                    <h3 class="person-name">Alene Ray</h3>
-                    <div class="person-donation">+$18</div>
+                  <div class="card-info">
+                    <img class="person-image" src="../../assets/images/testimonials/alene.jpg" alt="Alene" />
+                    <div class="feedback__card-caption">
+                      <h3 class="person-name">Alene Ray</h3>
+                      <div class="person-donation">+$18</div>
+                    </div>
                   </div>
                   <p class="card-text">
                     "Thank you for all the knowledge, education, pleasure and happiness you have add to all our lives at no expense on our part. My humble thanks and gratitude are
