--- a/online-zoo/pages/zoos/alligator/alligator.html
+++ b/online-zoo/pages/zoos/alligator/alligator.html
@@ -44,6 +44,7 @@
     </header>
     <div class="wrapper">
       <aside class="sidebar">
+        
         <ul class="sidebar-menu">
           <li class="sidebar-icon icon-active">
             <div class="icon-container">
@@ -105,6 +106,9 @@
             </div>
           </li>
         </ul>
+        <a class="sidebar-menu__arrow">
+          <img src="../../../../assets/icons/buttons/arrow-right.svg" alt="">
+        </a>
       </aside>
       <main class="main content">
         <div class="container">
@@ -286,5 +290,6 @@
         </div>
       </div>
     </footer>
+    <script src="alligator.js"></script>
   </body>
 </html>
