--- a/online-zoo/pages/zoos/panda/panda.html
+++ b/online-zoo/pages/zoos/panda/panda.html
@@ -105,6 +105,9 @@
             </div>
           </li>
         </ul>
+        <a class="sidebar-menu__arrow">
+          <img src="../../../../assets/icons/buttons/arrow-right.svg" alt="">
+        </a>
       </aside>
       <main class="main content">
         <div class="container">
@@ -289,5 +292,6 @@
         </div>
       </div>
     </footer>
+    <script src="panda.js"></script>
   </body>
 </html>
