--- a/online-zoo/pages/zoos/alligator/alligator.html
+++ b/online-zoo/pages/zoos/alligator/alligator.html
@@ -44,7 +44,6 @@
     </header>
     <div class="wrapper">
       <aside class="sidebar">
-        
         <ul class="sidebar-menu">
           <li class="sidebar-icon icon-active">
             <div class="icon-container">
@@ -56,6 +55,9 @@
               <div class="tooltip-block">
                 <h6 class="tooltip-heading">alligator,</h6>
                 <p class="tooltip-location text">florida, USA</p>
+                <div class="tooltip__link-block">
+                  <a class="tooltip-link" href="./alligator.html">Watch online</a>
+                </div>
               </div>
             </span>
           </li>
@@ -69,6 +71,9 @@
               <div class="tooltip-block">
                 <h6 class="tooltip-heading">panda,</h6>
                 <p class="tooltip-location text">china</p>
+                <div class="tooltip__link-block">
+                  <a class="tooltip-link" href="../panda/panda.html">Watch online</a>
+                </div>
               </div>
             </span>
           </li>
@@ -82,6 +87,9 @@
               <div class="tooltip-block">
                 <h6 class="tooltip-heading">eagle,</h6>
                 <p class="tooltip-location text">california,USA</p>
+                <div class="tooltip__link-block">
+                  <a class="tooltip-link" href="../eagle/eagle.html">Watch online</a>
+                </div>
               </div>
             </span>
           </li>
@@ -95,6 +103,9 @@
               <div class="tooltip-block">
                 <h6 class="tooltip-heading">gorilla,</h6>
                 <p class="tooltip-location text">eastern DRC</p>
+                <div class="tooltip__link-block">
+                  <a class="tooltip-link" href="../gorilla/gorilla.html">Watch online</a>
+                </div>
               </div>
             </span>
           </li>
@@ -107,7 +118,7 @@
           </li>
         </ul>
         <a class="sidebar-menu__arrow">
-          <img src="../../../../assets/icons/buttons/arrow-right.svg" alt="">
+          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="" />
         </a>
       </aside>
       <main class="main content">
@@ -171,7 +182,7 @@
           </div>
         </div>
         <div class="info-container container">
-          <div class="info">
+          <div class="info info-block">
             <div class="info info1 text">ZOO: Alligator Farm Zoological Park in Florida (USA)</div>
             <div class="info info2 text">ENCLOSURE TYPE: Imitation of the natural environment</div>
           </div>
@@ -226,7 +237,7 @@
               <a href="../../main/index.html">
                 <img class="logo footer-logo" src="../../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
-              <div class="donate__button">
+              <div class="donate__button donate__button--left">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
               </div>
             </div>
@@ -240,7 +251,7 @@
                     <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link menu__link--footer" href="../../map/map.html">map</a>
+                    <a class="menu__link menu__link--footer" href="../../../map/map.html">map</a>
                   </li>
                   <li class="menu__item footer-menu-item">
                     <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
@@ -281,6 +292,9 @@
               <a class="yd-logo" href="javascript:void(0)" title="Yem Digital">
                 <img src="../../../assets/icons/logo/yd-logo.svg" alt="" />
               </a>
+            </div>
+            <div class="donate__button donate__button--right">
+              <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
             </div>
             <div class="footer-copyright">
               <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
