--- a/online-zoo/pages/map/map.html
+++ b/online-zoo/pages/map/map.html
@@ -24,6 +24,9 @@
             <nav class="nav">
               <ul class="menu">
                 <li class="menu__item">
+                  <div class="menu__item--cross"></div>
+                </li>
+                <li class="menu__item">
                   <a class="menu__link" href="../main/index.html">about</a>
                 </li>
                 <li class="menu__item">
@@ -40,6 +43,9 @@
                 </li>
               </ul>
             </nav>
+            <div class="menu__burger">
+              <span></span>
+            </div>
           </div>
         </div>
       </header>
@@ -1025,11 +1031,11 @@
               <a href="../main/index.html">
                 <img class="logo footer-logo" src="../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
+            </div>
+            <div class="footer-links__links">
               <div class="donate__button donate__button--left">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
               </div>
-            </div>
-            <div class="footer-links__links">
               <nav class="footer-nav">
                 <ul class="menu footer-menu">
                   <li class="menu__item footer-menu-item">
@@ -1085,12 +1091,13 @@
               <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
             </div>
             <div class="footer-copyright">
-              <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
+              <div class="copyright">Copyright ©RSSchool <span class="and">and</span> ©Yem Digital 2020 - 2021</div>
               <div class="designer">Grigoreva Margarita</div>
             </div>
           </div>
         </div>
       </div>
     </footer>
+    <script src="./map.js"></script>
   </body>
 </html>
