--- a/online-zoo/pages/zoos/alligator/alligator.html
+++ b/online-zoo/pages/zoos/alligator/alligator.html
@@ -23,6 +23,9 @@
           <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
+                <div class="menu__item--cross"></div>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="../../main/index.html">about</a>
               </li>
               <li class="menu__item">
@@ -39,6 +42,9 @@
               </li>
             </ul>
           </nav>
+          <div class="menu__burger">
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -178,6 +184,9 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
+              <div class="feed__button">
+                <a class="button button--feed" href="javascript:void(0)">Feed</a>
+              </div>
             </div>
           </div>
         </div>
@@ -188,42 +197,22 @@
           </div>
           <div class="spoilers">
             <details class="spoiler-details spoiler-details1" open>
-              <summary class="spoiler-summary">
-                <span class="text">population</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">There are now more than 1 million alligators in the wild.</p>
-              </div>
+              <summary class="spoiler-summary">population</summary>
+              There are now more than 1 million alligators in the wild.
             </details>
             <details class="spoiler-details spoiler-details2" open>
-              <summary class="spoiler-summary">
-                <span class="text">habitat</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">Alligators are almost exclusively found in freshwater rivers, lakes, marshes or swamps.</p>
-              </div>
+              <summary class="spoiler-summary">habitat</summary>
+              Alligators are almost exclusively found in freshwater rivers, lakes, marshes or swamps.
             </details>
             <details class="spoiler-details spoiler-details3" open>
-              <summary class="spoiler-summary">
-                <span class="text">nutrition</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
-                  These apex predators eat mostly fish, turtles, snakes, birds and small mammals. But alligators are known for being opportunists; when hungry, they will attack
-                  larger prey like deer or cattle.
-                </p>
-              </div>
+              <summary class="spoiler-summary">nutrition</summary>
+              These apex predators eat mostly fish, turtles, snakes, birds and small mammals. But alligators are known for being opportunists; when hungry, they will attack larger
+              prey like deer or cattle.
             </details>
             <details class="spoiler-details spoiler-details4" open>
-              <summary class="spoiler-summary">
-                <span class="text">interesting facts</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
-                  American alligators are typically between 10 and 15 feet long and can weigh 1,000 lbs. Despite being large and somewhat ungainly, alligators can run up to 11 mph
-                  on land--but they can't sustain that speed for very long.
-                </p>
-              </div>
+              <summary class="spoiler-summary">interesting facts</summary>
+              American alligators are typically between 10 and 15 feet long and can weigh 1,000 lbs. Despite being large and somewhat ungainly, alligators can run up to 11 mph on
+              land--but they can't sustain that speed for very long.
             </details>
           </div>
         </div>
@@ -237,11 +226,11 @@
               <a href="../../main/index.html">
                 <img class="logo footer-logo" src="../../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
+            </div>
+            <div class="footer-links__links">
               <div class="donate__button donate__button--left">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
               </div>
-            </div>
-            <div class="footer-links__links">
               <nav class="footer-nav">
                 <ul class="menu footer-menu">
                   <li class="menu__item footer-menu-item">
@@ -297,7 +286,7 @@
               <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
             </div>
             <div class="footer-copyright">
-              <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
+              <div class="copyright">Copyright ©RSSchool <span class="and">and</span> ©Yem Digital 2020 - 2021</div>
               <div class="designer">Grigoreva Margarita</div>
             </div>
           </div>
