--- a/online-zoo/pages/zoos/eagle/eagle.html
+++ b/online-zoo/pages/zoos/eagle/eagle.html
@@ -23,6 +23,9 @@
           <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
+                <li class="menu__item">
+                  <div class="menu__item--cross"></div>
+                </li>
                 <a class="menu__link" href="../../main/index.html">about</a>
               </li>
               <li class="menu__item">
@@ -39,6 +42,9 @@
               </li>
             </ul>
           </nav>
+          <div class="menu__burger">
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -118,7 +124,7 @@
           </li>
         </ul>
         <a class="sidebar-menu__arrow">
-          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="">
+          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="" />
         </a>
       </aside>
       <main class="main content">
@@ -178,6 +184,9 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
+              <div class="feed__button">
+                <a class="button button--feed" href="javascript:void(0)">Feed</a>
+              </div>
             </div>
           </div>
         </div>
@@ -188,45 +197,23 @@
           </div>
           <div class="spoilers">
             <details class="spoiler-details spoiler-details1" open>
-              <summary class="spoiler-summary">
-                <span class="text">population</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.</p>
-              </div>
+              <summary class="spoiler-summary">population</summary>
+                Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.
             </details>
             <details class="spoiler-details spoiler-details2" open>
-              <summary class="spoiler-summary">
-                <span class="text">habitat</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
+              <summary class="spoiler-summary">habitat</summary>
                   A large number of eagles live in the state of Minnesota-about 1300 pairs. In another US state, Florida, there are about 1,200 pairs. In Alaska, about 40 thousand
                   individuals nest annually, after laying eggs, with the onset of cold weather, the eagles fly south.
-                </p>
-              </div>
             </details>
             <details class="spoiler-details spoiler-details3" open>
-              <summary class="spoiler-summary">
-                <span class="text">nutrition</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
+              <summary class="spoiler-summary">nutrition</summary>
                   Mostly bald eagles feed on fish or birds. They also hunt ground squirrels, rabbits, beavers, raccoons and muskrats. Eagles can also attack a baby seal. Eagles
                   also feed on carrion, for example, they eat the corpses of large horned animals.
-                </p>
-              </div>
             </details>
             <details class="spoiler-details spoiler-details4" open>
-              <summary class="spoiler-summary">
-                <span class="text">interesting facts</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
+              <summary class="spoiler-summary">interesting facts</summary>
                   Bald eagles can live a long time, with a longevity record of 28 years in the wild and 36 years in captivity. The bald eagle is the national bird of the United
                   States of America.
-                </p>
-              </div>
             </details>
           </div>
         </div>
@@ -240,27 +227,27 @@
               <a href="../../main/index.html">
                 <img class="logo footer-logo" src="../../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
+            </div>
+            <div class="footer-links__links">
               <div class="donate__button donate__button--left">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
               </div>
-            </div>
-            <div class="footer-links__links">
-                <nav class="footer-nav">
-                  <ul class="menu footer-menu">
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="../../main/index.html">about</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="../../../map/map.html">map</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
-                    </li>
-                  </ul>
-                </nav>
+              <nav class="footer-nav">
+                <ul class="menu footer-menu">
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../main/index.html">about</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../../map/map.html">map</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
+                  </li>
+                </ul>
+              </nav>
               <address class="socials">
                 <ul class="social">
                   <li class="menu__item">
@@ -300,7 +287,7 @@
               <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
             </div>
             <div class="footer-copyright">
-              <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
+              <div class="copyright">Copyright ©RSSchool <span class="and">and</span> ©Yem Digital 2020 - 2021</div>
               <div class="designer">Grigoreva Margarita</div>
             </div>
           </div>
