--- a/online-zoo/pages/zoos/gorilla/gorilla.html
+++ b/online-zoo/pages/zoos/gorilla/gorilla.html
@@ -23,6 +23,9 @@
           <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
+                <div class="menu__item--cross"></div>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="../../main/index.html">about</a>
               </li>
               <li class="menu__item">
@@ -39,6 +42,9 @@
               </li>
             </ul>
           </nav>
+          <div class="menu__burger">
+            <span></span>
+          </div>
         </div>
       </div>
     </header>
@@ -118,7 +124,7 @@
           </li>
         </ul>
         <a class="sidebar-menu__arrow">
-          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="">
+          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="" />
         </a>
       </aside>
       <main class="main content">
@@ -178,6 +184,9 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen
               ></iframe>
+              <div class="feed__button">
+                <a class="button button--feed" href="javascript:void(0)">Feed</a>
+              </div>
             </div>
           </div>
         </div>
@@ -188,42 +197,22 @@
           </div>
           <div class="spoilers">
             <details class="spoiler-details spoiler-details1" open>
-              <summary class="spoiler-summary">
-                <span class="text">population</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">The eastern plains gorilla has a population of 17,000.</p>
-              </div>
+              <summary class="spoiler-summary">population</summary>
+              The eastern plains gorilla has a population of 17,000.
             </details>
             <details class="spoiler-details spoiler-details2" open>
-              <summary class="spoiler-summary">
-                <span class="text">habitat</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">The natural habitat of gorillas covers tropical or subtropical forests in sub – Saharan Africa.</p>
-              </div>
+              <summary class="spoiler-summary">habitat</summary>
+              The natural habitat of gorillas covers tropical or subtropical forests in sub – Saharan Africa.
             </details>
             <details class="spoiler-details spoiler-details3" open>
-              <summary class="spoiler-summary">
-                <span class="text">nutrition</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
-                  The basis of gorilla food is plant food. From the plants used, wild celery, bedstraw, nettle, bamboo shoots, blue pygeum fruits can be distinguished. Fruits and
-                  nuts are an addition to the main diet, while animal food (insects) is a small part of the menu.
-                </p>
-              </div>
+              <summary class="spoiler-summary">nutrition</summary>
+              The basis of gorilla food is plant food. From the plants used, wild celery, bedstraw, nettle, bamboo shoots, blue pygeum fruits can be distinguished. Fruits and nuts
+              are an addition to the main diet, while animal food (insects) is a small part of the menu.
             </details>
             <details class="spoiler-details spoiler-details4" open>
-              <summary class="spoiler-summary">
-                <span class="text">interesting facts</span>
-              </summary>
-              <div class="spoiler-content">
-                <p class="spoiler-text text">
-                  The DNA of gorillas is strongly similar to that of humans, 95 to 99% depending on what is included, and they are the next closest living relatives of humans after
-                  chimpanzees and bonobos.
-                </p>
-              </div>
+              <summary class="spoiler-summary">interesting facts</summary>
+              The DNA of gorillas is strongly similar to that of humans, 95 to 99% depending on what is included, and they are the next closest living relatives of humans after
+              chimpanzees and bonobos.
             </details>
           </div>
         </div>
@@ -237,27 +226,27 @@
               <a href="../../main/index.html">
                 <img class="logo footer-logo" src="../../../assets/icons/logo/zoo-logo.svg" alt="zoo-logo" />
               </a>
+            </div>
+            <div class="footer-links__links">
               <div class="donate__button donate__button--left">
                 <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
               </div>
-            </div>
-            <div class="footer-links__links">
-                <nav class="footer-nav">
-                  <ul class="menu footer-menu">
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="../../main/index.html">about</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="../../../map/map.html">map</a>
-                    </li>
-                    <li class="menu__item footer-menu-item">
-                      <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
-                    </li>
-                  </ul>
-                </nav>
+              <nav class="footer-nav">
+                <ul class="menu footer-menu">
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../main/index.html">about</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="../../../map/map.html">map</a>
+                  </li>
+                  <li class="menu__item footer-menu-item">
+                    <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
+                  </li>
+                </ul>
+              </nav>
               <address class="socials">
                 <ul class="social">
                   <li class="menu__item">
@@ -297,7 +286,7 @@
               <a class="button button--donate" href="javascript:void(0)">Donate for volunteers</a>
             </div>
             <div class="footer-copyright">
-              <div class="copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</div>
+              <div class="copyright">Copyright ©RSSchool <span class="and">and</span> ©Yem Digital 2020 - 2021</div>
               <div class="designer">Grigoreva Margarita</div>
             </div>
           </div>
