refactor: fonts and links

--- a/online-zoo/pages/zoos/alligator/alligator.html
+++ b/online-zoo/pages/zoos/alligator/alligator.html
@@ -124,7 +124,7 @@
           </li>
         </ul>
         <a class="sidebar-menu__arrow">
-          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="" />
+          <img class="arrow-img" src="../../../assets/icons/buttons/arrow-right.svg" alt="" />
         </a>
       </aside>
       <main class="main content">
