--- a/online-zoo/pages/zoos/eagle/eagle.html
+++ b/online-zoo/pages/zoos/eagle/eagle.html
@@ -23,9 +23,9 @@
           <nav class="nav">
             <ul class="menu">
               <li class="menu__item">
-                <li class="menu__item">
-                  <div class="menu__item--cross"></div>
-                </li>
+                <div class="menu__item--cross"></div>
+              </li>
+              <li class="menu__item">
                 <a class="menu__link" href="../../main/index.html">about</a>
               </li>
               <li class="menu__item">
@@ -124,7 +124,7 @@
           </li>
         </ul>
         <a class="sidebar-menu__arrow">
-          <img class="arrow-img" src="../../../../assets/icons/buttons/arrow-right.svg" alt="" />
+          <img class="arrow-img" src="../../../assets/icons/buttons/arrow-right.svg" alt="" />
         </a>
       </aside>
       <main class="main content">
@@ -198,22 +198,22 @@
           <div class="spoilers">
             <details class="spoiler-details spoiler-details1" open>
               <summary class="spoiler-summary">population</summary>
-                Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.
+              Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.
             </details>
             <details class="spoiler-details spoiler-details2" open>
               <summary class="spoiler-summary">habitat</summary>
-                  A large number of eagles live in the state of Minnesota-about 1300 pairs. In another US state, Florida, there are about 1,200 pairs. In Alaska, about 40 thousand
-                  individuals nest annually, after laying eggs, with the onset of cold weather, the eagles fly south.
+              A large number of eagles live in the state of Minnesota-about 1300 pairs. In another US state, Florida, there are about 1,200 pairs. In Alaska, about 40 thousand
+              individuals nest annually, after laying eggs, with the onset of cold weather, the eagles fly south.
             </details>
             <details class="spoiler-details spoiler-details3" open>
               <summary class="spoiler-summary">nutrition</summary>
-                  Mostly bald eagles feed on fish or birds. They also hunt ground squirrels, rabbits, beavers, raccoons and muskrats. Eagles can also attack a baby seal. Eagles
-                  also feed on carrion, for example, they eat the corpses of large horned animals.
+              Mostly bald eagles feed on fish or birds. They also hunt ground squirrels, rabbits, beavers, raccoons and muskrats. Eagles can also attack a baby seal. Eagles also
+              feed on carrion, for example, they eat the corpses of large horned animals.
             </details>
             <details class="spoiler-details spoiler-details4" open>
               <summary class="spoiler-summary">interesting facts</summary>
-                  Bald eagles can live a long time, with a longevity record of 28 years in the wild and 36 years in captivity. The bald eagle is the national bird of the United
-                  States of America.
+              Bald eagles can live a long time, with a longevity record of 28 years in the wild and 36 years in captivity. The bald eagle is the national bird of the United States
+              of America.
             </details>
           </div>
         </div>
