--- a/online-zoo/pages/zoos/eagle/eagle.html
+++ b/online-zoo/pages/zoos/eagle/eagle.html
@@ -241,7 +241,7 @@
                     <a class="menu__link menu__link--footer" href="../../page-not-found/page-not-found.html">contact us</a>
                   </li>
                   <li class="menu__item footer-menu-item">
-                    <a class="menu__link menu__link--footer" href="../../../map/map.html">map</a>
+                    <a class="menu__link menu__link--footer" href="../../map/map.html">map</a>
                   </li>
                   <li class="menu__item footer-menu-item">
                     <a class="menu__link menu__link--footer" href="javascript:void(0)">feedback</a>
