feat: add how-it-works carousel

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -65,21 +65,21 @@
         <div class="how-it-works__container content">
           <h2 class="heading">how it works</h2>
           <div class="pets-wrapper">
-            <div class="pets-box">
-              <ul class="pets">
-                <li class="image eagle">
+            <div class="carousel">
+              <ul class="carousel__list">
+                <li class="carousel__item eagle" data-pos="-2">
                   <img class="pet-image" src="../../assets/images/pets-parallax/eagle.jpg" alt="eagle" />
                 </li>
-                <li class="image tiger">
+                <li class="carousel__item tiger" data-pos="-1">
                   <img class="pet-image" src="../../assets/images/pets-parallax/tiger.jpg" alt="tiger" />
                 </li>
-                <li class="image panda">
+                <li class="carousel__item panda" data-pos="0">
                   <img class="pet-image" src="../../assets/images/pets-parallax/panda.jpg" alt="panda" />
                 </li>
-                <li class="image monkey">
+                <li class="carousel__item monkey" data-pos="1">
                   <img class="pet-image" src="../../assets/images/pets-parallax/monkey.jpg" alt="monkey" />
                 </li>
-                <li class="image elephant">
+                <li class="carousel__item elephant" data-pos="2">
                   <img class="pet-image" src="../../assets/images/pets-parallax/elephant.jpg" alt="elephant" />
                 </li>
               </ul>
@@ -505,6 +505,7 @@
     <div class="cover hidden" id="cover"></div>
     <script src="./index.js"></script>
     <script src="./pop-up.js"></script>
+    <script src="./carousel-how-it-works.js"></script>
     <script src="./carousel-pets-in-zoo.js"></script>
   </body>
 </html>
